--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
     "expo-mail-composer": "~9.0.0",
     "expo-notifications": "~0.8.2",
     "expo-permissions": "~10.0.0",
