--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^5.9.10",
     "expo": "~40.0.0",
     "expo-image-manipulator": "~8.4.0",
     "expo-image-picker": "~9.2.0",
@@ -42,6 +43,7 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "react-native-netinfo": "^1.1.0",
     "react-test-renderer": "~16.13.1"
   },
   "jest": {
