--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/netinfo": "^5.9.10",
     "expo": "~40.0.0",
+    "expo-calendar": "~8.6.0",
     "expo-image-manipulator": "~8.4.0",
     "expo-image-picker": "~9.2.0",
     "expo-mail-composer": "~9.0.0",
